--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
             <nav class="header-top">
                 <div class="l-col">
                     <ul>
-                        <li>li</li>
-                        <li>li</li>
-                        <li>li</li>
-                        <li>li</li>
+                        <li><img src="/img/logo-small.png" alt=""></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#"> Funzioni</a></li>
+                        <li><a href="#">Piani e Prezzi</a></li>
                     </ul>
                 </div>
                 <div class="r-col">
                     <ul>
-                        <li>li</li>
-                        <li>li</li>
-                        <li>li</li>
-                        <li>li</li>
+                        <li><a href="#">Supporto</a></li>
+                        <li><a href="#">Contatta l'ufficio</a></li>
+                        <li><a href="#">Accedi</a></li>
+                        <li>
+                            <div class="button">Inizia</div>
+                        </li>
                     </ul>
                 </div>
             </nav>
