-completata terza sezione griglia da 6 card

--- a/index.html
+++ b/index.html
@@ -231,18 +231,80 @@
           <a class="button" id="white" href="#">Trova un partner</a>
         </div>
       </div>
+      
+      <!-- fine seconda sezione -->
+      
+      <!-- terza sezione -->
 
       <div class="main-container-3rd-row">
         <h2>Esegui più operazioni con Dropbox Business</h2>
           <div class="container">
-            <div></div>
-          <div class="margin-3rd"></div>
-          <div></div>
-          <div></div>
-          <div class="margin-3rd"></div>
-          <div></div>
+            <div class="operation-card">
+              <div>
+                <img src="./img/business-feature-switching-tools.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
+            <div class="margin-3rd operation-card">
+              <div>
+                <img src="./img/business-feature-send-files-it.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
+            <div class="operation-card">
+              <div>
+                <img src="./img/business-feature-switching-tools.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
+            <div class="operation-card">
+              <div>
+                <img src="./img/business-feature-switching-tools.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
+            <div class="margin-3rd operation-card">
+              <div>
+                <img src="./img/business-feature-multi-device.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
+            <div class="operation-card">
+              <div>
+                <img src="./img/business-feature-switching-tools.png" alt="">
+              </div>
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta a
+                periam voluptate voluptas eum! Quam, quidem, 
+                temporibus nostrum tempore incidunt dolore laudantium totam
+                 fugit rem, labore in a? Modi, aperiam.</p>
+            </div>
           </div>
       </div>
+
+      <!-- fine terza sezione -->
+
+      <!-- quarta sezione -->
 
       <div class="main-container-4th-row"></div>
 
@@ -262,12 +324,18 @@
         </div>
       </div>
 
+      <!-- fine quarta sezione -->
+
+      <!-- quinta sezione -->
+
       <div class="main-container-5th-row">
         <div class="info-box">
           <h3></h3>
           <div class="button"></div>
         </div>
       </div>
+
+      <!-- fine quinta sezione -->
 
       <div class="faq-row">
         <h3>h3</h3>
