--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
 
             <div class="icon-container">
-              <i class="fa-solid fa-arrow-down"></i>
+              <a href="#varius"><i class="fa-solid fa-arrow-down"></i></a>
             </div>
           </div>
           <div class="b-h-img">
@@ -85,9 +85,9 @@
           <input type="radio" id="radio-l" name="radio"> 
           <label for="radio">Fatturazione mensile</label>
           <input type="radio" id="radio-r" name="radio"> 
-          <label for="radio">Fatturazione annuale</label>
+          <label for="radio" id="varius">Fatturazione annuale</label>
         </div>
-        <div class="card-box">
+        <div class="card-box" >
           <div class="card">
             <div class="card-header">
               <i class="fa-solid fa-user"></i> Singolo
@@ -113,7 +113,7 @@
             </ul>
             <hr />
             <div class="list-2nd">
-              <ul class="fa-ul" style="--fa-li-margin: 1.5em">
+              <ul class="fa-ul" style="--fa-li-margin: 2.5em">
                 <li><h3>Punti salienti del piano</h3></li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"></i></span
@@ -154,7 +154,7 @@
             <hr />
 
             <div class="list-2nd">
-              <ul class="fa-ul" style="--fa-li-margin: 1.5em">
+              <ul class="fa-ul" style="--fa-li-margin: 2.5em">
                 <li><h3>Punti salienti del piano</h3></li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"></i></span
@@ -194,7 +194,7 @@
             <hr />
 
             <div class="list-2nd">
-              <ul class="fa-ul" style="--fa-li-margin: 1.5em">
+              <ul class="fa-ul" style="--fa-li-margin: 2.5em">
                 <li><h3>Punti salienti del piano</h3></li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"></i></span
