--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#">Contatta l'ufficio</a></li>
             <li><a href="#">Accedi</a></li>
             <li>
-              <div class="button">Inizia</div>
+              <a class="button" href="#">Inizia</a>
             </li>
           </ul>
         </div>
@@ -83,9 +83,9 @@
         </div>
         <div class="radio-box">
           <input type="radio" id="radio-l" name="radio"> 
-          <label for="radio">Fatturazione mensile</label>
+          <label for="radio-l">Fatturazione mensile</label>
           <input type="radio" id="radio-r" name="radio"> 
-          <label for="radio" id="varius">Fatturazione annuale</label>
+          <label for="radio-r" id="varius">Fatturazione annuale</label>
         </div>
         <div class="card-box" >
           <div class="card">
